apps/bgd/overlays/bgd/lamanginx2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lamanginx-2
  name: lamanginx-2
  namespace: lama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lamanginx-2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lamanginx-2
    spec:
      containers:
      - image: nawang81/lamanginx:2.0.0
        name: lamanginx-2
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lamanginx-2
  name: lamanginx2-service
  namespace: lama
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: lamanginx-2
---
