apps/bgd/overlays/bgd/lamangnix-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lamanginx
  name: lamanginx
  namespace: lama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lamanginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lamanginx
    spec:
      containers:
      - image: nawang81/lamanginx:1.0.0
        name: lamanginx
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lamanginx
  name: lamanginx-service
  namespace: lama
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: lamanginx
---
