apps/bgd/overlays/bgd/bgd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lama
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: lama.devnation
      http:
        paths:
          - path: 
            pathType: Prefix
            backend:
              service:
                name: lama-service
                port:
                  number: 8080
    - host: lamadai.devnation
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lamadai-service
                port:
                  number: 8080
          - path: /v2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: lamanginx-service
                port:
                  number: 80
          - path: /v3(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: lamanginx2-service
                port:
                  number: 80
---
