apps/bgd/overlays/bgd/lamadai-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lamadai2
  name: lamadai2
  namespace: lama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lamadai2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lamadai2
    spec:
      containers:
      - image: nawang81/lama_k8s:latest
        name: lamadai2
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lamadai2
  name: lamadai2-service
  namespace: lama
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: lamadai2
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lama2
spec:
  rules:
    - host: lamadai.devnation
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lamadai2-service
                port:
                  number: 8080
---
