apps/bgd/overlays/bgd/new-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lama2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: lamadai.devnation
      http:
        paths:
          - path: /lamadai(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: lamadai2-service
                port:
                  number: 8080
---
