apps/bgd/overlays/bgd/orginal-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lama
spec:
  rules:
    - host: lama.devnation
      http:
        paths:
          - path: 
            pathType: Prefix
            backend:
              service:
                name: lama-service
                port:
                  number: 8080
---
